--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ email: erayackgoz@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal site for Mark Qi.
 baseurl: '' # the subpath of your site, e.g. /blog
-url: 'https://merkle.dev' # the base hostname & protocol for your site, e.g. http://example.com
+url: 'https://erayack.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  erayack
 # Build Settings
 sass:
