--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@
 title: Eray Ack
 email: erayackgoz@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal site for Mark Qi.
+  Personal site for Eray Ack.
 baseurl: '' # the subpath of your site, e.g. /blog
 url: 'https://erayack.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  erayack
